# py-proj-template

./: .gitignore  .pylintrc  makefile  pyproject.toml  requirements.txt  setup.py
my_package/: __init__.py  my_package.py
